--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-TOKEN_KEY=afdlsnafd
+TOKEN_KEY=6564d0e92096df7c3f0ad46788f07564619d8f41307822543ac5e767e
+DB_HOST='localhost'
+DB_USER='root'
+DB_PASSWORD=''
+DB_DATABASE='online_store'
